# j2u4

./: .gitignore  LICENSE  README.md  account_to_arbauft_mapping.example.json  build-mapping  build_mapping_from_history.py  clients.py  config.example.json  inspect_ui.py  models.py  patterns.py  pyproject.toml  setup.sh  sync  sync_tempo_to_unit4.py  test_jira_connection.py  test_patterns.py  unit4_browser.py  utils.py
